# aloam-ros2

./: CLAUDE.md  aloam需求文档.md
a_loam_ros2/: CMakeLists.txt  package.xml
a_loam_ros2/config/: aloam_params.yaml
a_loam_ros2/launch/: aloam_velodyne_HDL_32.launch.py  aloam_velodyne_HDL_64.launch.py  aloam_velodyne_VLP_16.launch.py  kitti_helper.launch.py
a_loam_ros2/src/: kitti_helper_node.cpp  laser_mapping_node.cpp  laser_odometry_node.cpp  scan_registration_node.cpp
docs/superpowers/plans/: 2026-05-29-aloam-ros2-migration.md
docs/superpowers/specs/: 2026-05-29-aloam-ros2-migration-design.md
